--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
-    "drizzle-kit": "^0.31.4",
+    "drizzle-kit": "0.31.4",
     "eslint": "^8.57.1",
     "eslint-config-google": "^0.14.0",
     "eslint-config-next": "^14.2.13",
