--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,12 @@ DIRECT_URL=""
 BETTER_AUTH_SECRET=""
 BETTER_AUTH_URL=""
 
+# Mailer
+SMTP_HOST = 
+SMTP_USER = 
+SMTP_PASS = 
+
+
 #SUPABASE CLIENT
 NEXT_PUBLIC_SUPABASE_URL=<SUBSTITUTE_SUPABASE_URL>
 NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY=<SUBSTITUTE_SUPABASE_PUBLISHABLE_KEY>
