--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ SMTP_HOST =
 SMTP_USER = 
 SMTP_PASS = 
 
+KEEP_ALIVE_SECRET=#string panjang
 
 #SUPABASE CLIENT
 NEXT_PUBLIC_SUPABASE_URL=<SUBSTITUTE_SUPABASE_URL>
