--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "db:studio": "drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
-    "db:seed": "tsx ./src/server/database/seed.tsx"
+    "db:seed": "tsx ./src/server/database/seed.ts"
   },
   "dependencies": {
     "@better-fetch/fetch": "^1.1.18",
@@ -58,6 +58,7 @@
     "husky": "^9.0.11",
     "lucide-react": "^0.543.0",
     "moment": "^2.30.1",
+    "nanoid": "^5.1.6",
     "next": "14.2.35",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
