--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,9 @@ BETTER_AUTH_SECRET=""
 BETTER_AUTH_URL=""
 
 # Mailer
-SMTP_HOST = 
+EMAIL_FROM=no-reply@sentrarent.com
+SMTP_HOST =
+SMTP_PORT=587 
 SMTP_USER = 
 SMTP_PASS = 
 
