--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "bcryptjs": "^3.0.2",
     "better-auth": "^1.3.7",
     "clsx": "^2.1.1",
+    "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.5",
