--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "db:studio": "drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
+    "db:migrate": "drizzle-kit migrate",
     "db:seed": "tsx ./src/server/database/seed.ts"
   },
   "dependencies": {
@@ -49,6 +50,7 @@
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "better-auth": "^1.3.7",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
@@ -93,7 +95,7 @@
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
-    "drizzle-kit": "0.31.4",
+    "drizzle-kit": "0.31.9",
     "eslint": "^8.57.1",
     "eslint-config-google": "^0.14.0",
     "eslint-config-next": "^14.2.13",
