--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-number-format": "^5.4.4",
+    "react-redux": "^9.2.0",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
