--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
+    "sharp": "^0.34.5",
     "superjson": "^2.2.2",
     "sweetalert2": "^11.23.0",
     "sweetalert2-react-content": "^5.1.0",
